# unlimited-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLARIFY.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  NOTICE  PROMPTS.md  README.md  SECURITY.md  SSH.md  knowledge.yaml  primes.py  primos.py  pyproject.toml  server.json  test_smolagents.py  unlimited-mcp.md
.github/ISSUE_TEMPLATE/: agent_request.md  bug_report.md
.github/workflows/: publish.yml
demos/dev/: README.md  sample.py
local/experiments/: prime_list.py
skills/delegate/: SKILL.md
skills/selftest/: SKILL.md
skills/unlimited-mcp-selftest/: SKILL.md
src/unlimited_mcp/: __init__.py  cli.py  knowledge.yaml  paths.py  server.py
src/unlimited_mcp/agents/: __init__.py  base.py  clarify_prompt.md  runner.py
src/unlimited_mcp/config/: __init__.py  knowledge.py  loader.py  schema.py
src/unlimited_mcp/hosts/: __init__.py  base.py  local.py  registry.py  ssh.py
src/unlimited_mcp/jobs/: __init__.py  _ts_worker.py  postprocess.py  result.py  runner_local.py  runner_remote.py  runner_remote_ts.py  runner_ts.py  store.py
src/unlimited_mcp/observability/: __init__.py  log_query.py  logging.py  startup_cleanup.py
src/unlimited_mcp/providers/: __init__.py  base.py  openai_compat.py
src/unlimited_mcp/quality/: __init__.py  gate.py
src/unlimited_mcp/safety/: __init__.py  allowed_roots.py  argv_check.py  classes.py  confirmation.py  redactor.py
src/unlimited_mcp/tools/: __init__.py  config_tools.py  execution.py  jobs.py  knowledge_tools.py  workers_tools.py
src/unlimited_mcp/workspace/: __init__.py  git_worktree.py  manager.py  modes.py  temp_copy.py
tests/integration/: test_phase_0_dod.py  test_phase_1_dod.py  test_smoke.py
tests/unit/: test_agents_base.py  test_agents_runner.py  test_config_loader.py  test_hosts_local.py  test_hosts_registry.py  test_hosts_ssh.py  test_hosts_ssh_sftp.py  test_hosts_ssh_ts.py  test_jobs_runner_remote.py  test_jobs_runner_remote_ts.py  test_jobs_runner_ts.py  test_jobs_store.py  test_knowledge_store.py  test_observability_logging.py  test_providers_openai_compat.py  test_runner_local.py  test_safety_allowed_roots.py  test_safety_argv_check.py  test_safety_classes.py  test_safety_confirmation.py  test_safety_redactor.py  test_server.py  test_tools_execution.py  test_tools_jobs.py  test_workspace_git_worktree.py  test_workspace_manager.py  test_workspace_modes.py  test_workspace_temp_copy.py
